--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   </head>
   <body>
-    <div id="app">
+    <div id="SPA">
       
     </div>
     <script type="module" src="/src/main.js"></script>
